--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -1,11 +1,11 @@
-.listItem {
+.userCard {
   display: flex;
   flex-wrap: wrap;
   margin: 10px 0 10px 0;
   overflow: hidden;
 }
 
-.listItemChecked {
+.userCardChecked {
   border: 1px solid #6d5acf;
   background-color: #9dbcd4;
   box-shadow: 0 10px 15px darkgrey;
@@ -21,7 +21,7 @@
   margin: 10px 20px 10px 20px;
 }
 
-.listItemChecked .profileImg {
+.userCardChecked .profileImg {
   border: 3px solid #6d5acf;
   width: 100px;
   border-radius: 50%;
@@ -39,15 +39,15 @@
 }
 
 @media screen and (max-width: 468px) {
-  .listItem,
-  .listItemChecked {
+  .userCard,
+  .userCardChecked {
     flex-direction: column;
     align-items: center;
     border: 1px solid gray;
   }
 
-  .listItem p,
-  .listItemChecked p {
+  .userCard p,
+  .userCardChecked p {
     text-align: center;
   }
 
